integrate Card with itcss

--- a/client/src/common/components/Card/Card.scss
+++ b/client/src/common/components/Card/Card.scss
@@ -1,6 +1,5 @@
 .card {
-  background-color: black;
-  color: white;
+  background-color: $darkGray;
   border-radius: 10px;
   padding: 56px;
   margin: 100px;
