Create layout component

--- a/client/src/common/style.scss
+++ b/client/src/common/style.scss
@@ -2,3 +2,4 @@
 @import "./styles/generic.scss";
 @import "./styles/base.scss";
 @import "./styles/objects.scss";
+@import "./components/Layout/Layout.scss";
