--- a/client/src/common/styles/settings.scss
+++ b/client/src/common/styles/settings.scss
@@ -7,3 +7,5 @@ $gray: hsl(211, 10%, 45%);
 $lightGray: hsl(223, 19%, 93%);
 $veryLightGray: hsl(228, 33%, 97%);
 $white: hsl(0, 0%, 100%);
+
+$media-desktop: 768px;
