Add Icon component

--- a/client/src/common/style.scss
+++ b/client/src/common/style.scss
@@ -8,3 +8,4 @@
 @import "components/Card/Card";
 @import "components/Layout/Layout";
 @import "components/Text/Text";
+@import "components/Icon/Icon";
