Add button component

--- a/client/src/common/styles/objects.scss
+++ b/client/src/common/styles/objects.scss
@@ -13,3 +13,15 @@
 .color--gray {
   color: $gray;
 }
+
+.bg--red {
+  background: $red;
+}
+
+.bg--blue {
+  background: $blue;
+}
+
+.bg--dark {
+  background: $darkGray;
+}
