--- a/client/src/common/style.scss
+++ b/client/src/common/style.scss
@@ -9,3 +9,4 @@
 @import "components/Layout/Layout";
 @import "components/Text/Text";
 @import "components/Icon/Icon";
+@import "components/Button/Button";
