Add buttonText component

--- a/client/src/common/style.scss
+++ b/client/src/common/style.scss
@@ -10,3 +10,4 @@
 @import "components/Text/Text";
 @import "components/Icon/Icon";
 @import "components/Button/Button";
+@import "components/ButtonText/ButtonText";
