Add Avatar component

--- a/client/src/common/style.scss
+++ b/client/src/common/style.scss
@@ -11,3 +11,4 @@
 @import "components/Icon/Icon";
 @import "components/Button/Button";
 @import "components/ButtonText/ButtonText";
+@import "components/Avatar/Avatar";
