Add textArea component and fixed styles

--- a/client/src/common/components/Card/Card.scss
+++ b/client/src/common/components/Card/Card.scss
@@ -2,6 +2,7 @@
   background-color: $white;
   border-radius: 10px;
   padding: 16px;
+  border: 1px solid $lightGray;
 }
 
 @media (min-width: $media-desktop) {
