--- a/client/src/common/style.scss
+++ b/client/src/common/style.scss
@@ -12,3 +12,4 @@
 @import "components/Button/Button";
 @import "components/ButtonText/ButtonText";
 @import "components/Avatar/Avatar";
+@import "components/TextArea/TextArea";
