--- a/client/src/common/components/ButtonText/ButtonText.scss
+++ b/client/src/common/components/ButtonText/ButtonText.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  font-size: 14px;
   cursor: pointer;
   &:hover {
     opacity: 0.5;
