Add Modal component and styles

--- a/client/src/common/style.scss
+++ b/client/src/common/style.scss
@@ -13,3 +13,4 @@
 @import "components/ButtonText/ButtonText";
 @import "components/Avatar/Avatar";
 @import "components/TextArea/TextArea";
+@import "components/Modal/Modal";
