Add modalDelete component and styles

--- a/client/src/feed/style.scss
+++ b/client/src/feed/style.scss
@@ -3,3 +3,4 @@
 @import "Feed";
 @import "components/Likes/Likes";
 @import "components/Comment/Comment";
+@import "components/ModalDelete/ModalDelete";
