--- a/client/src/common/components/Modal/Modal.scss
+++ b/client/src/common/components/Modal/Modal.scss
@@ -4,8 +4,8 @@
   position: fixed;
   height: 100vh;
   width: 100vw;
-  background-color: $darkGray;
-  opacity: 0.8;
+  background-color: #000;
+  opacity: 0.3;
 }
 
 .modal {
@@ -21,7 +21,7 @@
   &__box {
     height: 220px;
     width: 100%;
-    max-width: 400px;
+    max-width: 340px;
     padding: 24px;
     margin-left: 16px;
     margin-right: 16px;
@@ -30,6 +30,8 @@
   }
 
   &__text {
-    font-size: 16px;
+    font-size: 18px;
+    margin-bottom: 16px;
+    color: $darkGray;
   }
 }
