--- a/client/src/common/components/Modal/Modal.scss
+++ b/client/src/common/components/Modal/Modal.scss
@@ -6,6 +6,7 @@
   width: 100vw;
   background-color: #000;
   opacity: 0.3;
+  z-index: 2;
 }
 
 .modal {
@@ -17,6 +18,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 3;
 
   &__box {
     height: 220px;
