Add AddComment component and styles

--- a/client/src/feed/style.scss
+++ b/client/src/feed/style.scss
@@ -4,3 +4,4 @@
 @import "components/Likes/Likes";
 @import "components/Comment/Comment";
 @import "components/ModalDelete/ModalDelete";
+@import "components/AddComment/AddComment";
