--- a/client/src/common/components/Button/Button.scss
+++ b/client/src/common/components/Button/Button.scss
@@ -3,6 +3,7 @@
   color: $white;
   padding: 12px 24px;
   border: none;
+  height: fit-content;
   cursor: pointer;
   text-transform: uppercase;
   &:hover {
