--- a/client/src/feed/Feed.scss
+++ b/client/src/feed/Feed.scss
@@ -2,8 +2,16 @@
   margin-bottom: 8px;
 }
 
+.feed__add-comment {
+  margin-top: 16px;
+}
+
 @media (min-width: $media-desktop) {
   .feed__comment {
-    margin-bottom: 16px;
+    margin-bottom: 12px;
+  }
+
+  .feed__add-comment {
+    margin-top: 0px;
   }
 }
