--- a/client/src/feed/components/Likes/Likes.scss
+++ b/client/src/feed/components/Likes/Likes.scss
@@ -4,7 +4,7 @@
   min-width: 100px;
   max-width: 100px;
   display: flex;
-  flex-direction: row;
+  flex-direction: row-reverse;
   align-items: center;
   justify-content: space-between;
   padding: 8px;
