minor refactor foldering

--- a/client/src/feed/components/Comment/Comment.scss
+++ b/client/src/feed/components/Comment/Comment.scss
@@ -1,3 +1,6 @@
+@import "ModalDelete/ModalDelete.scss";
+@import "Likes/Likes.scss";
+
 .comment {
   display: flex;
   flex-direction: column-reverse;
