--- a/client/src/feed/components/AddComment/AddComment.scss
+++ b/client/src/feed/components/AddComment/AddComment.scss
@@ -12,6 +12,11 @@
     margin-left: auto;
     margin-top: 16px;
   }
+  &__form {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+  }
 }
 
 @media (min-width: $media-desktop) {
@@ -26,6 +31,9 @@
     &__button {
       margin-left: 16px;
       margin-top: 0px;
+    }
+    &__form {
+      flex-direction: row;
     }
   }
 }
